Update Parser and Config. Tweak Host, Router, and Switch main().